KubernetesCoverageAgents/YAML/admin-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-server
  labels:
    app: petclinic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: petclinic
      microservice: admin-server
  template:
    metadata:
      labels:
        app: petclinic
        microservice: admin-server
    spec:
      containers:
      - name: admin-server
        image: harbor.parasoft.com/ctp/springcommunity/spring-petclinic-admin-server:latest
        imagePullPolicy: Always
        command: ["./dockerize"]
        args: ["-wait=tcp://discovery-server:8761", "-timeout=60s", "--", "java", "org.springframework.boot.loader.JarLauncher"]
        ports:
        - containerPort: 9090
---
apiVersion: v1
kind: Service
metadata:
  name: admin-server
spec:
  ports:
  - port: 9090
    protocol: TCP
    targetPort: 9090
  selector:
    app: petclinic
    microservice: admin-server
