KubernetesCoverageAgents/YAML/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: petclinic-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: api-gateway.demo
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 8080
          - path: /covagent/(.*)
            pathType: Prefix
            backend:
              service:
                name: api-gateway-coverage-agent
                port:
                  number: 8050
    - host: admin-server.demo
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: admin-server
                port:
                  number: 9090
    - host: config-server.demo
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: config-server
                port:
                  number: 8888
    - host: discovery-server.demo
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: discovery-server
                port:
                  number: 8761
    - host: customers-service.demo
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: customers-service
                port:
                  number: 8081
          - path: /covagent/(.*)
            pathType: Prefix
            backend:
              service:
                name: customers-service-coverage-agent
                port:
                  number: 8050
    - host: visits-service.demo
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: visits-service
                port:
                  number: 8082
          - path: /covagent/(.*)
            pathType: Prefix
            backend:
              service:
                name: visits-service-coverage-agent
                port:
                  number: 8050
    - host: vets-service.demo
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: vets-service
                port:
                  number: 8083
          - path: /covagent/(.*)
            pathType: Prefix
            backend:
              service:
                name: vets-service-coverage-agent
                port:
                  number: 8050
    - host: tracing-server.demo
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: tracing-server
                port:
                  number: 9411
